Update favicon with attractive gradient glasses design

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👓</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><defs><linearGradient id='g' x1='0%25' y1='0%25' x2='100%25' y2='100%25'><stop offset='0%25' style='stop-color:%2300c8c8'/><stop offset='100%25' style='stop-color:%230080ff'/></linearGradient></defs><rect width='100' height='100' rx='20' fill='url(%23g)'/><circle cx='30' cy='50' r='12' fill='white' opacity='0.9'/><circle cx='70' cy='50' r='12' fill='white' opacity='0.9'/><rect x='25' y='45' width='50' height='3' rx='1.5' fill='white' opacity='0.8'/><path d='M20 35 Q30 30 40 35' stroke='white' stroke-width='3' fill='none' opacity='0.8'/><path d='M60 35 Q70 30 80 35' stroke='white' stroke-width='3' fill='none' opacity='0.8'/></svg>">
     <title>VitaLens - AI Healthcare Smart Glasses</title>
     <meta name="description" content="Smart glasses that continuously monitor vital signs, environment, and emergencies using AI and advanced sensors" />
     <meta name="author" content="VitaLens" />
